--- a/library-management/package.json
+++ b/library-management/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-query": "^5.61.3",
     "@unovis/ts": "^1.5.0-beta.3",
@@ -24,6 +25,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-vue-next": "^0.461.0",
     "pinia": "^2.2.6",
     "radix-vue": "^1.9.10",
